Finished all requirements for the challenge

--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>David Villarreal's Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <h1>David Villarreal</h1>
+        <nav>
+            <ul>
+                <li><a id="navigation" href="#about-me">About Me</a></li>
+                <li><a id="navigation" href="#work">Work</a></li>
+                <li><a id="navigation" href="#contact-me">Contact Me</a></li>
+                <li><a id="navigation" href="#resume">Resume</a></li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section class="image-block">
+        <p><img src="./assets/images/selfie.jpg" alt="A selfie of David Villarreal" id="img-selfie" class="code-image"/></p>
+        <img src="./assets/images/newcode.jpg" alt="Picture of code." id="img-code"/>
+        <h2>I'm Locked In!😎</h2>
+    </section>    
+
+    <section class="content">
+        <div id="about-me">
+            <h2>About Me</h2>
+            <p>
+                Hi my Name is David Villarreal and I am an aspiring web developer. I am interested in coding and all things related to tech and 
+                hope to one day further my education far enough to get my phd in quantam computers. I believe that any contribution to that field will be 
+                beneficial no matter how small, even if all the time I put into research is referenced once would mean everything to me.
+                In my spare time I like to play games and study and I am currently employed at Sam's Club where I am a meal prep for the deli department.
+            </p>
+        </div>
+
+        <div id="work" class="work">
+            <h2>Work</h2>
+            <p><a href="https://davidvillarreal03.github.io/Challenge-01/">
+            <img src="./assets/images/Screenshot 2024-05-23 184901.png" alt="Picture of a project that was done by the user" id="img-project" class="project-hover"/>
+            </a></p>   
+            <h3>Search Engine Optimization</h3>
+
+        </div>
+
+        <div id="contact-me">
+            <h2>Contact Me</h2>
+            <p><ul>
+                <li><a id="contacts" href="#">Instagram</a> </li>
+                <li><a id="contacts" href="#">Github</a></li>
+                <li><a id="contacts" href="#">djmarch92014@gmail.com</a></li>
+                </ul></p>
+        </div>
+
+    </section>
+
 </body>
+
 </html>
